# moor-echo

./: .dockerignore  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AST_IMPROVEMENT_PLAN.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  README.md  clippy.toml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt  rustfmt.toml  test_arrow_debug  test_assignment_debug  test_function_call  test_guard_only.rs  test_guard_parse  test_keywords  test_keywords.rs  test_let_binding  test_match_direct  test_match_direct.rs  test_match_guard  test_match_guard.rs  test_match_minimal  test_match_newlines.echo  test_match_no_guard  test_match_no_guard.echo  (+16 more)
crates/echo-core/: Cargo.toml  JIT_COVERAGE.md  build.rs  test_match_debug.echo
crates/echo-core/benches/: jit_benchmark.rs
crates/echo-core/docs/: MOO_FEATURES_NEEDED.md
crates/echo-core/examples/: analyze_moo_features.rs  debug_all_objects_structure.rs  debug_compare_databases.rs  debug_exact_object_section.rs  debug_first_propval.rs  debug_full_database_parse.rs  debug_full_database_until_verbs.rs  debug_full_object_list_section.rs  debug_lambdacore_error.rs  debug_lambdacore_first_object.rs  debug_lambdacore_first_propval.rs  debug_lambdacore_full_database.rs  debug_lambdacore_full_parse.rs  debug_lambdacore_object_count.rs  debug_lambdacore_property_section.rs  debug_lambdacore_specific_error.rs  debug_lambdacore_verb_section.rs  debug_object3_parsing.rs  debug_object3_structure.rs  debug_object_boundaries.rs  debug_object_def_consumption.rs  debug_object_structure.rs  debug_parse_step_by_step.rs  debug_parsing_boundary.rs  debug_partial_database.rs  debug_property_consumption.rs  debug_property_sections.rs  debug_property_values_boundary.rs  debug_propval_matching.rs  debug_propval_rule.rs  debug_real_consumption.rs  debug_single_propval.rs  debug_str_value_consumption.rs  debug_suspended_tasks.rs  debug_toastcore_objects.rs  debug_two_objects.rs  debug_verb_consumption.rs  debug_verb_content.rs  final_moo_import.rs  import_cowbell.rs  (+20 more)
crates/echo-core/src/: lib.rs  runtime.rs  security.rs  ui_callback.rs
crates/echo-core/test_emit_args/: db  snap.00000000000019D0
crates/echo-core/test_emit_basic/: db  snap.0000000000000F47  snap.00000000000022A8
crates/echo-core/test_event_handler/: db  snap.0000000000001814  snap.0000000000001C30  snap.0000000000002564
crates/echo-core/test_handler_count/: db  snap.00000000000017E2  snap.0000000000001BFE  snap.0000000000002532
crates/echo-core/test_optional_destructuring_db/: db
crates/echo-core/tests/: cowbell_integration_tests.rs  moo_db_browser_tests.rs  system_tracer_tests.rs
crates/echo-repl/: Cargo.toml
crates/echo-repl/echo-db/: db
crates/echo-repl/src/: lib.rs  main.rs
crates/echo-repl/tests/: integration_tests.rs
crates/echo-web/: Cargo.toml  test_ui.js
crates/echo-web/echo-web-db/: db
crates/echo-web/src/: events.rs  lib.rs  notifier.rs  server.rs  web_notifier.rs
crates/echo-web/static/: index.html
echo-repl/: .gitignore  CLEANUP_SUMMARY.md  COOPERATIVE_MULTITHREADING.md  CST_ALIGNMENT_PLAN.md  CST_COMPARISON.md  Cargo.toml  DESIGN_NOTES_FUNCTION_COLORS.md  GRAMMAR_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  LAMBDA_IMPLEMENTATION.md  LAMBDA_SUMMARY.md  LANGUAGE_ROADMAP.md  MODERN_ECHO_GRAMMAR.md  MOP_IMPROVEMENTS.md  MULTILINE_REPL_SUMMARY.md  Makefile  README.md  RUST_SITTER_PATTERNS.md  SIDE_PROJECT_COMPARISON.md  TESTING.md  TUPLE_SPACE_ARCHITECTURE.md  XMLUI_INTEGRATION.md  build.rs  clippy.toml  critique.md  demo_eval.txt  demo_eval2.txt  demo_multiline.sh  echo_test.echo  mini_test.echo  run_echo_tests.py  run_echo_tests.sh  run_tests.echo  run_tests_simple.sh  rustfmt.toml  simple_test.echo  test.sh  test_assignment.txt  test_basic.echo  test_batch.echo  (+43 more)
echo-repl/.github/workflows/: ci.yml
echo-repl/aidocs/: rust-sitter.md
echo-repl/echo-db/: db  snap.00000000000007E6  snap.0000000000006B89
echo-repl/examples/: dynamic_ui_demo.echo  rust_sitter_demo.rs  test_rust_sitter.rs
echo-repl/schema/: echo.capnp
echo-repl/src/: lib.rs  main.rs
echo-repl/src/ast/: mod.rs  source_gen.rs
echo-repl/src/evaluator/: errors.rs  event_system.rs  events.rs  jit.rs  lambda_tests.rs  meta_object.rs  mod.rs  mop_source_tests.rs  object_ref_tests.rs  player_tests.rs  sanity_tests.rs  verb_tests.rs
echo-repl/src/moo_import/: mod.rs
echo-repl/src/parser/: ast.rs  grammar.rs  mod.rs  tests.rs
echo-repl/src/repl/: mod.rs  multiline_simple.rs  web_notifier.rs
echo-repl/src/runtime/: scheduler.rs  supervisor.rs
echo-repl/src/storage/: event_store.rs  mod.rs  object_store.rs
echo-repl/static/: index.html
echo-repl/test-factory-db/: db
echo-repl/test-interpreter-db/: db  snap.00000000000006BF
echo-repl/test-jit-db/: db
echo-repl/test-method-db/: db  snap.0000000000000BB0  snap.00000000000017D6
echo-repl/test-method-undef-db/: db  snap.0000000000000690  snap.0000000000001195  snap.00000000000014FF
echo-repl/test-object-db/: db  snap.0000000000000879  snap.000000000000124B
echo-repl/test-object-prop-db/: db
echo-repl/test-poly-db/: db
echo-repl/test-string-db/: db  snap.00000000000007B1
echo-repl/test-string-let-db/: db  snap.00000000000005CD
echo-repl/test-wasm-jit-compatibility-db/: db  snap.000000000000194E
echo-repl/test-wasm-jit-complex-db/: db
echo-repl/test-wasm-jit-perf-db/: snap.00000000000004DB
echo-repl/test-wasm-jit-poly-db/: db
echo-repl/test_suites/: harness_sanity_tests.echo  minimal_sanity_test.echo  sanity_tests.echo  simple_sanity_tests.echo  single_line_tests.echo  test_harness.echo
echo-repl/tests/: conditional_tests.rs  exception_tests.rs  function_tests.rs  jit_tests.rs  loop_tests.rs  meta_object_tests.rs  method_call_tests.rs  object_tests.rs  player_tests.rs  property_access_tests.rs  repl_tests.rs  rust_sitter_tests.rs  string_tests.rs  test_control_flow.echo  test_data_types.echo  test_lambdas.echo  verb_tests.rs  wasm_jit_tests.rs
(+207 files in other folders)
