[workspace]
members = [
    "crates/echo-core",
    "crates/echo-repl", 
    "crates/echo-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/moor-echo"
homepage = "https://github.com/username/moor-echo"
documentation = "https://docs.rs/echo-core"
authors = ["Echo Contributors"]
keywords = ["programming-language", "moo", "repl", "collaborative"]
categories = ["development-tools", "web-programming"]

[workspace.dependencies]
# Core dependencies shared across crates
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage and serialization
sled = "0.34"
rkyv = { version = "0.7", features = ["validation"] }
dashmap = "5.0"
parking_lot = "0.12"

# Parser dependencies  
tree-sitter = "0.20"
thiserror = "1.0"

# Web server dependencies
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
hyper = "1.0"
futures = "0.3"

# CLI dependencies
rustyline = "13.0"
clap = { version = "4.0", features = ["derive"] }

# Development dependencies
criterion = "0.5"
tempfile = "3.0"

# Additional dependencies for existing code
bincode = "1.3"
crossbeam-channel = "0.5"
rust-sitter = "0.4"

# Build dependencies needed for rust-sitter
# [workspace.build-dependencies]
rust-sitter-tool = "0.4"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true