[package]
name = "echo-repl"
version = "0.1.0"
edition = "2024"

[dependencies]
timely = "0.12"
sled = "0.34"
tokio = { version = "1.35", features = ["full"] }
rustyline = "13.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
log = "0.4"
env_logger = "0.11"
rust-sitter = "0.4"
rust-sitter-tool = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
crossbeam-channel = "0.5"

# Optional dependencies for distribution
raft = { version = "0.7", optional = true }
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = []
distributed = ["raft", "tonic", "prost"]
