[package]
name = "echo-repl"
version = "0.1.0"
edition = "2024"

[dependencies]
timely = "0.12"
sled = "0.34"
tokio = { version = "1.35", features = ["full"] }
rustyline = "13.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rkyv = { version = "0.7", features = ["std", "validation", "uuid", "size_32"] }
bytecheck = "0.7"
log = "0.4"
env_logger = "0.11"
rust-sitter = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Web UI dependencies (optional)
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
futures = { version = "0.3", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

# Optional dependencies for distribution
raft = { version = "0.7", optional = true }
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }

# Optional dependencies for JIT compilation
cranelift = { version = "0.121", optional = true }
cranelift-jit = { version = "0.121", optional = true }
cranelift-module = { version = "0.121", optional = true }
cranelift-native = { version = "0.121", optional = true }

# WebAssembly JIT compilation
wasmtime = { version = "27", optional = true }
wasmtime-wasi = { version = "27", optional = true }
wasm-encoder = { version = "0.220", optional = true }

[build-dependencies]
rust-sitter-tool = "0.4"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["interpreter"]
interpreter = []
jit = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
wasm-jit = ["wasmtime", "wasmtime-wasi", "wasm-encoder"]
distributed = ["raft", "tonic", "prost"]
web-ui = ["axum", "tower", "tower-http", "futures"]

