[package]
name = "echo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core Echo programming language implementation with parser, evaluator, and storage"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

# Storage and serialization
sled.workspace = true
rkyv.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

# Parser
tree-sitter.workspace = true
tree-sitter-moo.workspace = true
pest = "2.7"
pest_derive = "2.7"
nom = "7.1"

# Additional dependencies that were in original echo-repl
bincode.workspace = true
crossbeam-channel.workspace = true
rust-sitter.workspace = true

# Additional core dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }
regex = "1.10"

# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"

# Optional JIT dependencies
cranelift = { version = "0.99", optional = true }
cranelift-jit = { version = "0.99", optional = true }
cranelift-module = { version = "0.99", optional = true }
cranelift-native = { version = "0.99", optional = true }

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
pretty_assertions = "1.4"

[build-dependencies]
rust-sitter-tool = "0.4"

[features]
default = []
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]
reflection = []

# Benchmarks temporarily disabled during crate extraction
# [[bench]]
# name = "evaluator_benchmarks"
# harness = false

# [[bench]]
# name = "parser_benchmarks" 
# harness = false

[[bench]]
name = "jit_benchmark"
harness = false

[[bin]]
name = "moo_db_browser"
path = "src/bin/moo_db_browser.rs"

[[example]]
name = "test_simple_parser"
path = "examples/test_simple_parser.rs"

[[example]]
name = "test_grammar_rules"
path = "examples/test_grammar_rules.rs"