[package]
name = "echo-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Web server and UI components for the Echo programming language"

[[bin]]
name = "web-server"
path = "src/bin/web-server.rs"

[dependencies]
# Core Echo language
echo-core = { path = "../echo-core" }

# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Web server dependencies
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []